tests/errors/from_yaml_wrong_type.dang
type Summary {
  pub children: [String!]!
}

let summary: Summary! = fromYAML("oops")
